--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
-    <head>Hello</head>
-    <body><p>Hello world for kanabserg!</p></body>
+    <head>
+        <!-- JQuery CDN-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="js/app.js"></script>
+    </head>
+    <body><label id="hello">Hello world!</label></body>
 </html>
