--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <html>
     <head>
-        <!-- JQuery CDN-->
+        <title>Parking App</title>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!--CDN-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment-with-locales.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="js/app.js"></script>
     </head>
-    <body><label id="hello">Hello world!</label></body>
+    <body>
+        <label id="current-date"></label>
+        <div id="content">
+            <table id="sign-info"></table>
+        </div>
+    </body>
 </html>
