--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
         <link rel="manifest" href="./manifest.webmanifest">
-
+        <link rel="apple-touch-icon" href="/img/icons/apple-icon.png">
         <!--CDN-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment-with-locales.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
         <script src="js/app.js"></script>
     </head>
     <body>
