--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
         <link rel="manifest" href="./manifest.webmanifest">
+
+        <link rel="shortcut icon" href="/img/icons/apple-icon.png" type="image/png">
         <link rel="apple-touch-icon" href="/img/icons/apple-icon.png">
         <!--CDN-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment-with-locales.min.js"></script>
