--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="manifest" href="./manifest.webmanifest">
 
         <link rel="shortcut icon" href="/img/icons/apple-icon.png" type="image/png">
-        <link rel="apple-touch-icon" href="/img/icons/apple-icon.png">
+        <link rel="apple-touch-icon" href="https://cdn.glitch.com/49d34dc6-8fbd-46bb-8221-b99ffd36f1af%2Ftouchicon-180.png?v=1566411949736">
         <!--CDN-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment-with-locales.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
