--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
         <link rel="manifest" href="./manifest.webmanifest">
-
-        <link rel="shortcut icon" href="/img/icons/apple-icon.png" type="image/png">
+        <link rel="shortcut icon" href="https://cdn.glitch.com/49d34dc6-8fbd-46bb-8221-b99ffd36f1af%2Fapple-touch-icon.png?v=1566861131254">
+    
         <link rel="apple-touch-icon" href="https://cdn.glitch.com/49d34dc6-8fbd-46bb-8221-b99ffd36f1af%2Ftouchicon-180.png?v=1566411949736">
         <!--CDN-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment-with-locales.min.js"></script>
