--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
         <link rel="shortcut icon" href="./img/icons/icon-192x192.png">    
         <link rel="apple-touch-icon" href="./img/icons/apple-icon-180.png">
 
-        <link rel="apple-touch-startup-image" href="img/splashscreens/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" />
-        <link rel="apple-touch-startup-image" href="img/splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" />
-        <link rel="apple-touch-startup-image" href="img/splashscreens/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" />
+        <link rel="apple-touch-startup-image" href="img/splashscreens/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px)" />
+        <link rel="apple-touch-startup-image" href="img/splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px)" />
+        <link rel="apple-touch-startup-image" href="img/splashscreens/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px)" />
         <link rel="apple-touch-startup-image" href="img/splashscreens/iphonex_splash.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" />
-        <link rel="apple-touch-startup-image" href="img/splashscreens/iphonexr_splash.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" />
+        <link rel="apple-touch-startup-image" href="img/splashscreens/iphonexr_splash.png" media="(device-width: 414px) and (device-height: 896px)" />
         <link rel="apple-touch-startup-image" href="img/splashscreens/iphonexsmax_splash.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)" />
-        <link rel="apple-touch-startup-image" href="img/splashscreens/ipad_splash.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" />
-        <link rel="apple-touch-startup-image" href="img/splashscreens/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" />
-        <link rel="apple-touch-startup-image" href="img/splashscreens/ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" />
-        <link rel="apple-touch-startup-image" href="img/splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" />
+        <link rel="apple-touch-startup-image" href="img/splashscreens/ipad_splash.png" media="(device-width: 768px) and (device-height: 1024px)" />
+        <link rel="apple-touch-startup-image" href="img/splashscreens/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px)" />
+        <link rel="apple-touch-startup-image" href="img/splashscreens/ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px)" />
+        <link rel="apple-touch-startup-image" href="img/splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px)" />
         
         
         <link rel="stylesheet" type="text/css" href="./css/styles.css">
